[gd_scene load_steps=6 format=3 uid="uid://dnqoj4eg2l7le"]

[ext_resource type="Script" path="res://Scripts/Triggers/trampolineTrigger.gd" id="1_nuh0k"]
[ext_resource type="SpriteFrames" uid="uid://82s0kbf8kedv" path="res://Art/SpriteFrames/trampolineAnims.tres" id="2_k65r4"]
[ext_resource type="AudioStream" uid="uid://dvax4m54t4opd" path="res://Sounds/trampoline.ogg" id="4_8qc4l"]
[ext_resource type="PackedScene" uid="uid://djjr177758y2h" path="res://Scenes/Triggers/Trigger_Helpers/triggerKey.tscn" id="4_w7rx4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2sohs"]
size = Vector2(52, 8)

[node name="trampolineTrigger" type="Node2D" node_paths=PackedStringArray("area2D", "BlockSprite", "MoveToPosition", "Sound", "TriggerKeySprite")]
script = ExtResource("1_nuh0k")
jump_force = 700.0
area2D = NodePath("BounceArea")
BlockSprite = NodePath("BlockSprite")
MoveToPosition = NodePath("MoveToPosition")
Sound = NodePath("TrampolineSounds")
button = 77
TriggerKeySprite = NodePath("TriggerKeySprite")

[node name="BlockSprite" type="AnimatedSprite2D" parent="."]
z_index = 70
z_as_relative = false
sprite_frames = ExtResource("2_k65r4")
animation = &"deactivated"

[node name="TriggerKeySprite" parent="." instance=ExtResource("4_w7rx4")]
position = Vector2(0, 48)

[node name="BounceArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_2sohs")

[node name="MoveToPosition" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="TrampolineSounds" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_8qc4l")
volume_db = 10.0
bus = &"Sound Effects"
